--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
 		"typescript": "^5.9.3",
 		"typescript-eslint": "^8.46.1",
 		"vite": "^7.1.10"
+	},
+	"dependencies": {
+		"mariadb": "^3.4.5"
 	}
 }
